End of section 16

--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -57,7 +57,7 @@
                       <span class="font-weight-bold" style="font-size: 1.5em;">
                         {{item.quantity}}
                       </span>
-                      <i (click)="removeBasketItem(item)" fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
+                      <i (click)="removeBasketItem(item)" class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
                     </div>
                   </td>
                   <td class="align-middle"><strong>{{item.price * item.quantity | currency}}</strong></td>
